solved some Alignment problem.

--- a/src/css/css-responsive.css
+++ b/src/css/css-responsive.css
@@ -93,7 +93,7 @@
   .BecomeOurPartner_section_7 {
     & .faqContainer {
       .answerContainer {
-        position: relative;
+        position: initial;
         width: 100%;
       }
     }
