--- a/src/css/index.css
+++ b/src/css/index.css
@@ -381,6 +381,10 @@ li {
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
 }
+
+.accordion-item {
+  border: none !important;
+}
 /***** End Global Css *****/
 
 /* ---------------------------------------------------- */
@@ -1633,12 +1637,12 @@ li {
     .answerContainer {
       border-radius: 2rem;
       background: #d9e8ff;
-      border: 2px solid #000;
-      box-shadow: rgb(51, 51, 51) 3px 3px 0px -1px;
       -webkit-border-radius: 2rem;
       -moz-border-radius: 2rem;
       -ms-border-radius: 2rem;
       -o-border-radius: 2rem;
+      border: 1px solid #000;
+      box-shadow: rgb(51, 51, 51) 3px 3px 0px -1px;
       position: absolute;
       width: 40%;
       right: 0;
